js/src/tests/test262/built-ins/NativeErrors/SyntaxError/is-error-object.js
assert
.
sameValue
(
Object
.
prototype
.
toString
.
call
(
new
SyntaxError
)
"
[
object
Error
]
"
)
;
reportCompare
(
0
0
)
;
